# V2X-Based-Multi-Vehicle-Visualization-in-RViz

./: README.md
images/: frames_2025-04-18_01.20.52.gv
src/localization_pkg/: package.xml  setup.py
src/localization_pkg/launch/: localization_launch.py
src/localization_pkg/localization_pkg/: localization_node.py
src/vehicle_visualizer/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/vehicle_visualizer/models/: car_lowres.stl
src/vehicle_visualizer/vehicle_visualizer/: visualize_cam.py
